Document packages in spigot modules